--- a/contenido.html
+++ b/contenido.html
@@ -21,16 +21,17 @@
 <body style="background-color: #80c3ff;">
   <div class="container conte aligns-items-center justify-content-center">
     <div class="row head1">
-      <a href="#popup4" class="btnTit">
+      <div class="btnTit">
         <h1>Herramienta 1.</h1>
         <h3>Modelo de Mahadevan (2000)</h3>
-      </a>
+        <p class="leyenda">Plantea el modelo de negocio en tres elementos. </p>
+      </div>
     </div>
     <div class="row">
       <div class="col-sm-4 col-her aligns-items-center justify-content-center">
-        <div class="row filash1"><a href="#popup1" class="boton d-flex align-items-center">Fuente de valor</a></div>
-        <div class="row filash1"><a href="#popup2" class="boton d-flex align-items-center">Fuente de ingresos​</a></div>
-        <div class="row filash1"><a href="#popup3" class="boton d-flex align-items-center">Fuente logística​</a></div>
+        <div class="row filash1"><a href="#popup1" class="boton d-flex align-items-center">Fuente de valor</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1"><a href="#popup2" class="boton d-flex align-items-center">Fuente de ingresos</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1"><a href="#popup3" class="boton d-flex align-items-center">Fuente logística</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
       </div>
     </div>
   </div>
