--- a/contenido2.html
+++ b/contenido2.html
@@ -21,21 +21,23 @@
 <body style="background-color: #80c3ff;">
   <div class="container conte aligns-items-center justify-content-center">
     <div class="row head1">
-      <a href="#popup5" class="btnTit">
+      <div href="#popup5" class="btnTit">
         <h1>Herramienta 2.</h1>
-        <h3>Modelo de Alt & Zimmerman (2001) </h3>
-      </a>
+        <h3>Modelo de Alt & Zimmerman (2001)</h3>
+        <p class="leyenda">Propone seis elementos que mezclan elementos de la empresa, como la misión y la visión, con
+          los elementos básicos del negocio en términos de entrega y captura de valor.</p>
+      </div>
     </div>
     <div class="row aligns-items-center justify-content-center">
       <div class="col-sm-2 column1">
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente de valor</a></div>
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente de ingresos​</a></div>
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente logística​</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Misión</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Procesos</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Aspectos legales</a></div>
       </div>
       <div class="col-sm-2 column1">
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente de valor</a></div>
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente de ingresos​</a></div>
-        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Fuente logística​</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Estructura</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Utilidad</a></div>
+        <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Aspectos tecnológicos</a></div>
       </div>
     </div>
   </div>
