--- a/contenido3.html
+++ b/contenido3.html
@@ -21,16 +21,20 @@
 <body style="background-color: #80c3ff;">
   <div class="container conte aligns-items-center justify-content-center">
     <div class="row head1">
-      <a href="#popup8" class="btnTit">
+      <div class="btnTit">
         <h1>Herramienta 3.</h1>
         <h3>Modelo de Applegate (2001)</h3>
-      </a>
+        Es un modelo más desarrollado y con un enfoque muy estratégico. <br><br>
+      </div>
     </div>
     <div class="row">
       <div class="col-sm-4 col-her aligns-items-center justify-content-center">
-        <div class="row filash1 d-flex align-items-center"><a href="#popup5" class="boton">Concepto</a></div>
-        <div class="row filash1 d-flex align-items-center"><a href="#popup6" class="boton">Capacidades</a></div>
-        <div class="row filash1 d-flex align-items-center"><a href="#popup7" class="boton">Valor</a></div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup5" class="boton">Concepto <p
+              class="lista1">En términos de oportunidad de mercado.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup6" class="boton">Capacidades <p
+              class="lista1">Tanto del consumidor como de la empresa.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup7" class="boton">Valor <p
+              class="lista1">Los beneficios, o sea, el valor que se genera.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
       </div>
     </div>
   </div>
