--- a/contenido2.html
+++ b/contenido2.html
@@ -28,13 +28,13 @@
           los elementos básicos del negocio en términos de entrega y captura de valor.</p>
       </div>
     </div>
-    <div class="row aligns-items-center justify-content-center">
-      <div class="col-sm-2 column1">
+    <div class="row d-flex aligns-items-center justify-content-center filaher-2">
+      <div class="col-sm-6 column1">
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Misión</a></div>
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Procesos</a></div>
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Aspectos legales</a></div>
       </div>
-      <div class="col-sm-2 column1">
+      <div class="col-sm-6 column1">
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Estructura</a></div>
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Utilidad</a></div>
         <div class="row filash2"><a href="" class="boton2 d-flex align-items-center">Aspectos tecnológicos</a></div>
