--- a/contenido.html
+++ b/contenido.html
@@ -29,9 +29,9 @@
     </div>
     <div class="row">
       <div class="col-sm-4 col-her aligns-items-center justify-content-center">
-        <div class="row filash1"><a href="#popup1" class="boton d-flex align-items-center">Fuente de valor</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
-        <div class="row filash1"><a href="#popup2" class="boton d-flex align-items-center">Fuente de ingresos</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
-        <div class="row filash1"><a href="#popup3" class="boton d-flex align-items-center">Fuente logística</a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1"><a href="#popup1" class="boton align-items-center"><div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Fuente de valor</a></div>
+        <div class="row filash1"><a href="#popup2" class="boton align-items-center"><div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Fuente de ingresos</a></div>
+        <div class="row filash1"><a href="#popup3" class="boton align-items-center"><div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Fuente logística</a></div>
       </div>
     </div>
   </div>
