--- a/contenido3.html
+++ b/contenido3.html
@@ -20,21 +20,27 @@
 
 <body style="background-color: #80c3ff;">
   <div class="container conte aligns-items-center justify-content-center">
-    <div class="row head1">
+    <div class="row head1 headher3">
       <div class="btnTit">
         <h1>Herramienta 3.</h1>
         <h3>Modelo de Applegate (2001)</h3>
-        Es un modelo más desarrollado y con un enfoque muy estratégico. <br><br>
+        <p>Es un modelo más desarrollado y con un enfoque muy estratégico.</p> <br><br>
       </div>
     </div>
-    <div class="row">
+    <div class="row her3">
       <div class="col-sm-4 col-her aligns-items-center justify-content-center">
-        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup5" class="boton">Concepto <p
-              class="lista1">En términos de oportunidad de mercado.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
-        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup6" class="boton">Capacidades <p
-              class="lista1">Tanto del consumidor como de la empresa.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
-        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup7" class="boton">Valor <p
-              class="lista1">Los beneficios, o sea, el valor que se genera.</p></a><div class="mas"><i class="fa-solid fa-circle-plus"></i></div></div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup5" class="boton">
+            <div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Concepto
+          </a>
+        </div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup6" class="boton">
+            <div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Capacidades
+          </a>
+        </div>
+        <div class="row filash1 d-flex align-items-center btncont3"><a href="#popup7" class="boton">
+            <div class="mas"><i class="fa-solid fa-circle-plus"></i></div>Valor
+          </a>
+        </div>
       </div>
     </div>
   </div>
