--- a/contenido2.html
+++ b/contenido2.html
@@ -23,8 +23,8 @@
     <div class="row head1">
       <div href="#popup5" class="btnTit">
         <h1>Herramienta 2.</h1>
-        <h3>Modelo de Alt & Zimmerman (2001)</h3>
-        <p class="leyenda">Propone seis elementos que mezclan elementos de la empresa, como la misión y la visión, con
+        <h3>Modelo de Alt y Zimmerman (2001)</h3>
+        <p class="leyenda">Propone seis fundamentos que mezclan elementos de la empresa, como la misión y la visión, con
           los elementos básicos del negocio en términos de entrega y captura de valor.</p>
       </div>
     </div>
