--- a/contenido3.html
+++ b/contenido3.html
@@ -73,7 +73,7 @@
       <a class="close" href="#"><span class="equis"><i class="fa-regular fa-circle-xmark"></i></span></a>
       <div class="content">
         <h1>Valor</h1>
-        Los beneficios, o sea, el valor que se genera.
+        Los beneficios, es decir, el valor que se genera.
       </div>
     </div>
   </div>
