--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 <div class="row filas fila2" onclick="window.location.href='contenido2.html'">
   <button class="btnInit">
     <h1>Herramienta 2</h1>
-    Modelo de Alt & Zimmerman (2001)
+    Modelo de Alt y Zimmerman (2001)
   </button>
 </div>
 <div class="row filas fila3" onclick="window.location.href='contenido3.html'">
